# llm-self-critique

./: README.md  app.ipynb  pyproject.toml
data/: transcript_1.txt  transcript_redacted_1.txt  transcript_redacted_2.txt  transcript_redacted_3.txt
